--- a/Playbooks/0000Rename.yml
+++ b/Playbooks/0000Rename.yml
@@ -18,7 +18,12 @@
 
       always:
         - name: Export Semaphore UI log
-          ansible.builtin.include_tasks: "../task/export_semaphore_ui_txt.yml"
+          ansible.builtin.include_tasks: "../tasks/export_semaphore_ui_txt.yml"
           vars:
             playbook_name_for_report: "0000Rename"
             semaphore_project_id: "4"
+            semaphore_base_url: "http://localhost:3000"
+            report_base_dir: "reports"
+            semaphore_user: "testadmin"
+            semaphore_pass: "Test1234!"
+
