--- a/task/export_semaphore_ui_txt.yml
+++ b/task/export_semaphore_ui_txt.yml
@@ -1,77 +1,79 @@
 ---
-- name: Ensure curl is installed on Semaphore VM (local, OS-agnostic)
-  delegate_to: localhost
-  run_once: true
-  vars:
-    ansible_connection: local
-  become: true
-  ansible.builtin.package:
-    name: curl
-    state: present
+# File: tasks/export_semaphore_ui_txt.yml
+# Usage (in your playbook, in always):
+# - include_tasks: "../tasks/export_semaphore_ui_txt.yml"
+#   vars:
+#     playbook_name_for_report: "0000Rename"
+#     semaphore_project_id: "4"
+#     semaphore_base_url: "http://localhost:3000"
+#     report_base_dir: "reports"
+#     semaphore_user: "testadmin"
+#     semaphore_pass: "<PASSWORD>"   # better: from Semaphore variable/secret
 
-- name: Timestamp + TaskID vorbereiten
+- name: Ensure report vars (timestamp + task id)
   delegate_to: localhost
   run_once: true
   become: false
-  vars:
-    ansible_connection: local
   ansible.builtin.set_fact:
     report_ts: "{{ lookup('pipe','date +%Y%m%d_%H%M%S') }}"
     semaphore_task_id: "{{ semaphore_vars.task_details.id | default('unknown') | string }}"
 
-- name: Semaphore UI Output als TXT exportieren (UI-like) + Git commit/push
+- name: Ensure report directory exists (local)
   delegate_to: localhost
   run_once: true
   become: false
-  vars:
-    ansible_connection: local
-  no_log: false   # wenn es läuft: auf true setzen (SEMA_PASS!)
+  ansible.builtin.file:
+    path: "{{ report_base_dir | default('reports') }}"
+    state: directory
+    mode: "0755"
+
+- name: Export Semaphore UI task output as structured TXT (local)
+  delegate_to: localhost
+  run_once: true
+  become: false
+  # Sobald es läuft: auf true setzen, damit Passwort nicht im Log landet
+  no_log: false
   ansible.builtin.shell: |
     set -euo pipefail
 
-    BASE="http://localhost:3000"
+    BASE="{{ semaphore_base_url | default('http://localhost:3000') }}"
     PROJECT_ID="{{ semaphore_project_id | default('4') }}"
     TASK_ID="{{ semaphore_task_id }}"
     TS="{{ report_ts }}"
+    OUTDIR="{{ report_base_dir | default('reports') }}"
+
+    # These should be passed as vars from Semaphore/Template
+    USER="{{ semaphore_user | default('testadmin') }}"
+    PASS="{{ semaphore_pass | default('') }}"
+
     PB="{{ playbook_name_for_report | default('playbook') | regex_replace('[^A-Za-z0-9._-]', '_') }}"
 
-    USER="${SEMA_USER:-testadmin}"
-    PASS="${SEMA_PASS:-}"
-
     if [ -z "$PASS" ]; then
-      echo "ERROR: SEMA_PASS fehlt. Bitte in Semaphore als Environment Variable setzen." >&2
+      echo "ERROR: semaphore_pass is empty. Provide it via Semaphore variables/secrets." >&2
       exit 2
     fi
 
-    command -v curl >/dev/null 2>&1 || { echo "ERROR: curl nicht verfügbar (package install fehlgeschlagen?)"; exit 127; }
-    command -v git  >/dev/null 2>&1 || { echo "ERROR: git nicht installiert"; exit 127; }
-    command -v python3 >/dev/null 2>&1 || { echo "ERROR: python3 nicht installiert"; exit 127; }
+    # Basic tool checks (curl + python3 required)
+    command -v curl >/dev/null 2>&1 || { echo "ERROR: curl not found"; exit 127; }
+    command -v python3 >/dev/null 2>&1 || { echo "ERROR: python3 not found"; exit 127; }
 
-    # In Repo-Root wechseln (damit reports/ wirklich im Git-Checkout liegt)
-    if git rev-parse --is-inside-work-tree >/dev/null 2>&1; then
-      cd "$(git rev-parse --show-toplevel)"
-    else
-      echo "ERROR: Nicht in einem Git-Working-Tree (Semaphore working dir unerwartet)." >&2
-      exit 3
-    fi
-
-    mkdir -p reports
-
-    # Login -> Cookie
+    # Login -> cookie
     curl -s -c /tmp/sema_cookies.txt -X POST \
       -H "Content-Type: application/json" \
       -d "{\"auth\":\"$USER\",\"password\":\"$PASS\"}" \
       "$BASE/api/auth/login" > /dev/null
 
+    # Get meta + output (UI log)
     META="$(curl -s -b /tmp/sema_cookies.txt "$BASE/api/project/$PROJECT_ID/tasks/$TASK_ID")"
     OUT="$(curl -s -b /tmp/sema_cookies.txt "$BASE/api/project/$PROJECT_ID/tasks/$TASK_ID/output")"
 
+    # Extract header fields from META (robust)
     STATUS="$(python3 -c 'import json,sys; d=json.loads(sys.argv[1]); print(d.get("status",""))' "$META")"
     AUTHOR="$(python3 -c 'import json,sys; d=json.loads(sys.argv[1]); print(d.get("username",""))' "$META")"
     STARTED="$(python3 -c 'import json,sys; d=json.loads(sys.argv[1]); print(d.get("start",""))' "$META")"
     DURATION="$(python3 -c 'import json,sys; d=json.loads(sys.argv[1]); print(d.get("duration",""))' "$META")"
 
-    OUTFILE="reports/${TS}_task${TASK_ID}_${PB}_semaphore_ui.txt"
+    OUTFILE="${OUTDIR}/${TS}_task${TASK_ID}_${PB}_semaphore_ui.txt"
 
     {
       echo "${PB} > Task #${TASK_ID}"
@@ -80,25 +82,11 @@
       echo "Started: ${STARTED}"
       echo "Duration: ${DURATION}"
       echo ""
+      # 1:1 the log lines you see in Semaphore UI
       echo "$OUT"
       echo ""
     } > "$OUTFILE"
 
     echo "Wrote: $OUTFILE"
-
-    # Git commit & push
-    git config user.email "semaphore@local"
-    git config user.name "Semaphore Bot"
-
-    git add "$OUTFILE"
-
-    if git diff --cached --quiet; then
-      echo "No changes to commit."
-      exit 0
-    fi
-
-    git commit -m "Add Semaphore UI report: task ${TASK_ID} (${PB})" >/dev/null
-    git push
-    echo "DONE: pushed report to remote."
   args:
     executable: /bin/bash
